# Handwritting-Recognition-System

./: .gitignore  .pa4  .pa5  README.md
.github/workflows/: run_tests.yml
pa4-sys/: CMakeLists.txt
pa4-sys/eval/: hrs-binary-search-eval.cc  hrs-linear-search-eval.cc
pa4-sys/scripts/: hrs-linear-search-testing-time-eval.sh
pa4-sys/src/: HRSBinarySearch.cc  HRSBinarySearch.h  HRSLinearSearch.cc  HRSLinearSearch.h  IHandwritingRecSys.h  Image.cc  Image.h  VectorImage.cc  VectorImage.h  VectorImage.inl  VectorInt.cc  VectorInt.h  VectorInt.inl  ece2400-stdlib.cc  ece2400-stdlib.h  image-adhoc.cc  mnist-utils.cc  mnist-utils.h  sort-image-adhoc.cc  sort-image.cc  sort-image.h  sort-int-adhoc.cc  sort-int.cc  sort-int.h  vector-image-adhoc.cc  vector-int-adhoc.cc
pa4-sys/test/: hrs-binary-search-directed-test.cc  hrs-linear-search-directed-test.cc  image-directed-test.cc  image-random-test.cc  sort-image-directed-test.cc  sort-image-random-test.cc  sort-int-directed-test.cc  sort-int-random-test.cc  vector-image-directed-test.cc  vector-image-random-test.cc  vector-int-directed-test.cc  vector-int-random-test.cc
pa5-sys/: CMakeLists.txt
pa5-sys/eval/: hrs-alternative-eval.cc  hrs-backend.cc  hrs-binary-search-eval.cc  hrs-linear-search-eval.cc  hrs-table-search-eval.cc  hrs-tree-search-eval.cc
pa5-sys/src/: HRSAlternative.cc  HRSAlternative.h  HRSBinarySearch.cc  HRSBinarySearch.h  HRSLinearSearch.cc  HRSLinearSearch.h  HRSTableSearch.cc  HRSTableSearch.h  HRSTreeSearch.cc  HRSTreeSearch.h  IHandwritingRecSys.h  Image.cc  Image.h  Image.inl  Table.h  Table.inl  Tree.h  Tree.inl  Vector.h  Vector.inl  ece2400-stdlib.cc  ece2400-stdlib.h  ece2400-stdlib.inl  image-adhoc.cc  mnist-utils.cc  mnist-utils.h  sort-adhoc.cc  sort.h  sort.inl  table-adhoc.cc  tree-adhoc.cc  vector-adhoc.cc
pa5-sys/test/: hrs-alternative-directed-test.cc  hrs-binary-search-directed-test.cc  hrs-linear-search-directed-test.cc  hrs-table-search-directed-test.cc  hrs-tree-search-directed-test.cc  image-directed-test.cc  image-random-test.cc  sort-directed-test.h  sort-image-directed-test.cc  sort-image-random-test.cc  sort-int-directed-test.cc  sort-int-random-test.cc  sort-random-test.h  table-directed-test.h  table-image-directed-test.cc  table-image-random-test.cc  table-int-directed-test.cc  table-int-random-test.cc  table-random-test.h  tree-directed-test.h  tree-image-directed-test.cc  tree-image-random-test.cc  tree-int-directed-test.cc  tree-int-random-test.cc  tree-random-test.h  vector-directed-test.h  vector-image-directed-test.cc  vector-image-random-test.cc  vector-int-directed-test.cc  vector-int-random-test.cc  vector-random-test.h
scripts/: ece2400-format.py
